--- a/deploy/transip-webhook/values.yaml
+++ b/deploy/transip-webhook/values.yaml
@@ -7,7 +7,6 @@ certManager:
 image:
   repository: quanby/cert-manager-webhook-transip
   tag: latest
-  privateRegistrySecretName: ""
   pullPolicy: IfNotPresent
 
 nameOverride: ""
@@ -18,12 +17,16 @@ service:
   port: 443
 
 resources: {}
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
   #  cpu: 100m
-  #  memory: 64Mi
+  #  memory: 128Mi
   # requests:
   #  cpu: 100m
-  #  memory: 16Mi
+  #  memory: 128Mi
 
 nodeSelector: {}
 
