--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,13 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Ignore the built binary
+cert-manager-webhook-transip
+
+# Make artifacts
+_out
+_test
+
 # IntelliJ
 .idea/
 
