--- a/deploy/transip-webhook/values.yaml
+++ b/deploy/transip-webhook/values.yaml
@@ -1,6 +1,6 @@
 # The GroupName here is used to identify your company or business unit that
 # created this webhook.
-# For transip, this may be "acme.mycompany.com".
+# For example, this may be "acme.mycompany.com".
 # This name will need to be referenced in each Issuer's `webhook` stanza to
 # inform cert-manager of where to send ChallengePayload resources in order to
 # solve the DNS01 challenge.
@@ -14,8 +14,8 @@ certManager:
 
 image:
   repository: quanby/cert-manager-webhook-transip
-  tag: latest
-  pullPolicy: IfNotPresent
+  tag: 1.7.3
+  pullPolicy: Always
 
 nameOverride: ""
 fullnameOverride: ""
