--- a/deploy/transip-webhook/Chart.yaml
+++ b/deploy/transip-webhook/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for Kubernetes
+appVersion: v1.11.1
+description: A Helm chart for cert-manager-webhook
 name: transip-webhook
-version: 0.1.0
+version: v1.11.1
